<resources>
    <string name="app_name">RSSFeed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_news">News</string>
    <string name="title_technology">Technology</string>
    <string name="title_education">Education</string>
    <string name="title_business">Business</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_law">Law</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_switch">Switch</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_data">No Data</string>
    <string name="network_error">Network Error</string>
    <string name="connection_time_out">Time Out</string>

    <!-- String Category-->
    <string name="business">Business</string>
    <string name="education">Education</string>
    <string name="technology">Technology</string>
    <string name="law">Law</string>
    <string name="news">News</string>
    <string name="entertainment">Entertainment</string>
    <string name="news_uppercase">NEWS</string>
    <string name="history_uppercase">HISTORY</string>
    <string name="title_favorite">Favorite</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="warning_dialog">You will delete all history, Do you want to continue?</string>
    <string name="warning_title">WARNING</string>
    <string name="action_delete">delete</string>
    <string name="information_title">INFORMATION</string>
    <string name="nothing_dialog">No item found</string>
    <string name="action_favorite_list">Favorite List</string>

    <string-array name="title_all">
        <item>Business</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Technology</item>
        <item>Law</item>
        <item>News</item>
    </string-array>
</resources>
