<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/title_news" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/title_business" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_menu_education"
            android:title="@string/title_education" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_entertainment"
            android:title="@string/title_entertainment" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_technology"
            android:title="@string/title_technology" />
        <item
            android:id="@+id/nav_law"
            android:icon="@drawable/ic_menu_law"
            android:title="@string/title_law" />
    </group>
</menu>
