<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/action_group">
        <item
            android:id="@+id/action_favorite"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/ic_normal_star"
            android:title="@string/action_favorite"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/action_refresh"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_switch"
            android:title="@string/action_switch"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_open_favorite_list"
            android:icon="@drawable/ic_favorites_list"
            android:title="@string/action_favorite_list"
            app:showAsAction="always" />
    </group>
</menu>
