<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/common_size_5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/common_size_5"
        android:paddingLeft="@dimen/common_size_5"
        android:paddingTop="@dimen/common_size_5"
        android:text="@string/warning_title"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/common_text_size_14"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/common_size_10"
        android:text="@string/warning_dialog"
        android:textColor="@color/black"
        android:textSize="@dimen/common_text_size_10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/common_size_5">

        <TextView
            android:id="@+id/button_ok"
            android:layout_width="@dimen/common_size_80"
            android:layout_height="@dimen/common_size_40"
            android:layout_alignParentRight="true"
            android:background="@drawable/flat_effect"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_text_size_10" />

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="@dimen/common_size_80"
            android:layout_height="@dimen/common_size_40"
            android:layout_toLeftOf="@+id/button_ok"
            android:background="@drawable/flat_effect"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_text_size_10" />
    </RelativeLayout>
</LinearLayout>